--- a/public/css/light.css
+++ b/public/css/light.css
@@ -61,8 +61,9 @@
       height: 10%;
       z-index: 0;
   }
-  .bg-ehe{
-      background-image: url('../img/fond.png');
+  .bg-medical{
+      background-image: url('../img/background/bg-medical-01.jpg');
+      /* background-color: #EDEDED; */
       background-repeat: no-repeat;
       background-position-x: center;
       background-position-y: center;
@@ -70,19 +71,6 @@
       height: 100%;
       position: fixed;
       z-index: 0;
-  }
-  .bg-radient-ehe{
-    background: linear-gradient(0.25turn, rgb(244,151,25),rgb(244,151,25),rgb(244,151,25), rgb(244,151,25),rgb(237, 110, 97), rgb(237, 110, 97),rgb(237, 110, 97));
-    width: 100%;
-    height: 162px;
-  }
-  .bg-banniere {
-    background-image: url('../img/banniere.png');
-    background-repeat: no-repeat;
-    background-position-x: center;
-    background-position-y: center;
-    width: 100%;
-    height: 162px;
   }
   .widget:hover{
     background-color: rgba(250, 250, 250, 0.767);
