--- a/public/css/light.css
+++ b/public/css/light.css
@@ -52,14 +52,14 @@
    color:#495057;
    -webkit-text-size-adjust:100%;
    -webkit-tap-highlight-color:rgba(0,0,0,0);
-   background-image: url('../img/fond.png');
+   /* background-image: url('../img/fond.png');
       background-repeat: no-repeat;
       background-size: auto;
       background-position-x: center;
       background-position-y: center;
       width: 100%;
       height: 10%;
-      z-index: 0;
+      z-index: 0; */
   }
   .bg-medical{
       background-image: url('../img/background/bg-medical-01.jpg');
