--- a/public/css/light.css
+++ b/public/css/light.css
@@ -61,6 +61,9 @@
       height: 10%;
       z-index: 0; */
   }
+  .bg-medium {
+      background-color: rgba(51, 51, 51, 0.712);
+  }
   .bg-medical{
       background-image: url('../img/background/bg-medical-01.jpg');
       /* background-color: #EDEDED; */
