--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -6,3 +6,15 @@
 
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
+
+.bg-medical{
+    background-image: url('../../public/img/background/bg-medical-01.jpg');
+    /* background-color: #EDEDED; */
+    background-repeat: no-repeat;
+    background-position-x: center;
+    background-position-y: center;
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    z-index: 0;
+}
