--- a/public/css/app.css
+++ b/public/css/app.css
@@ -13,7 +13,7 @@
   --pink: #f66d9b;
   --red: #e3342f;
   --orange: #f6993f;
-  --yellow: #ffed4a;
+  --yellow: #ffcc00;
   --green: #38c172;
   --teal: #4dc0b5;
   --cyan: #6cb2eb;
@@ -24,7 +24,7 @@
   --secondary: #6c757d;
   --success: #38c172;
   --info: #6cb2eb;
-  --warning: #38c172;
+  --warning: #ffcc00;
   --danger: #e3342f;
   --light: #f8f9fa;
   --dark: #343a40;
@@ -1781,21 +1781,21 @@ pre code {
 .table-warning,
 .table-warning > th,
 .table-warning > td {
-  background-color: #c7eed8;
+  background-color: #fff1b8;
 }
 .table-warning th,
 .table-warning td,
 .table-warning thead th,
 .table-warning tbody + tbody {
-  border-color: #98dfb6;
+  border-color: #ffe47a;
 }
 
 .table-hover .table-warning:hover {
-  background-color: #b3e8ca;
+  background-color: #ffec9f;
 }
 .table-hover .table-warning:hover > td,
 .table-hover .table-warning:hover > th {
-  background-color: #b3e8ca;
+  background-color: #ffec9f;
 }
 
 .table-danger,
@@ -2567,33 +2567,33 @@ fieldset:disabled a.btn {
 }
 
 .btn-warning {
-  color: #fff;
-  background-color: #38c172;
-  border-color: #38c172;
+  color: #212529;
+  background-color: #ffcc00;
+  border-color: #ffcc00;
 }
 .btn-warning:hover {
-  color: #fff;
-  background-color: #2fa360;
-  border-color: #2d995b;
+  color: #212529;
+  background-color: #d9ad00;
+  border-color: #cca300;
 }
 .btn-warning:focus, .btn-warning.focus {
-  color: #fff;
-  background-color: #2fa360;
-  border-color: #2d995b;
-  box-shadow: 0 0 0 0.2rem rgba(86, 202, 135, 0.5);
+  color: #212529;
+  background-color: #d9ad00;
+  border-color: #cca300;
+  box-shadow: 0 0 0 0.2rem rgba(222, 179, 6, 0.5);
 }
 .btn-warning.disabled, .btn-warning:disabled {
-  color: #fff;
-  background-color: #38c172;
-  border-color: #38c172;
+  color: #212529;
+  background-color: #ffcc00;
+  border-color: #ffcc00;
 }
 .btn-warning:not(:disabled):not(.disabled):active, .btn-warning:not(:disabled):not(.disabled).active, .show > .btn-warning.dropdown-toggle {
-  color: #fff;
-  background-color: #2d995b;
-  border-color: #2a9055;
+  color: #212529;
+  background-color: #cca300;
+  border-color: #bf9900;
 }
 .btn-warning:not(:disabled):not(.disabled):active:focus, .btn-warning:not(:disabled):not(.disabled).active:focus, .show > .btn-warning.dropdown-toggle:focus {
-  box-shadow: 0 0 0 0.2rem rgba(86, 202, 135, 0.5);
+  box-shadow: 0 0 0 0.2rem rgba(222, 179, 6, 0.5);
 }
 
 .btn-danger {
@@ -2787,28 +2787,28 @@ fieldset:disabled a.btn {
 }
 
 .btn-outline-warning {
-  color: #38c172;
-  border-color: #38c172;
+  color: #ffcc00;
+  border-color: #ffcc00;
 }
 .btn-outline-warning:hover {
-  color: #fff;
-  background-color: #38c172;
-  border-color: #38c172;
+  color: #212529;
+  background-color: #ffcc00;
+  border-color: #ffcc00;
 }
 .btn-outline-warning:focus, .btn-outline-warning.focus {
-  box-shadow: 0 0 0 0.2rem rgba(56, 193, 114, 0.5);
+  box-shadow: 0 0 0 0.2rem rgba(255, 204, 0, 0.5);
 }
 .btn-outline-warning.disabled, .btn-outline-warning:disabled {
-  color: #38c172;
+  color: #ffcc00;
   background-color: transparent;
 }
 .btn-outline-warning:not(:disabled):not(.disabled):active, .btn-outline-warning:not(:disabled):not(.disabled).active, .show > .btn-outline-warning.dropdown-toggle {
-  color: #fff;
-  background-color: #38c172;
-  border-color: #38c172;
+  color: #212529;
+  background-color: #ffcc00;
+  border-color: #ffcc00;
 }
 .btn-outline-warning:not(:disabled):not(.disabled):active:focus, .btn-outline-warning:not(:disabled):not(.disabled).active:focus, .show > .btn-outline-warning.dropdown-toggle:focus {
-  box-shadow: 0 0 0 0.2rem rgba(56, 193, 114, 0.5);
+  box-shadow: 0 0 0 0.2rem rgba(255, 204, 0, 0.5);
 }
 
 .btn-outline-danger {
@@ -4770,16 +4770,16 @@ a.badge-info:focus, a.badge-info.focus {
 }
 
 .badge-warning {
-  color: #fff;
-  background-color: #38c172;
+  color: #212529;
+  background-color: #ffcc00;
 }
 a.badge-warning:hover, a.badge-warning:focus {
-  color: #fff;
-  background-color: #2d995b;
+  color: #212529;
+  background-color: #cca300;
 }
 a.badge-warning:focus, a.badge-warning.focus {
   outline: 0;
-  box-shadow: 0 0 0 0.2rem rgba(56, 193, 114, 0.5);
+  box-shadow: 0 0 0 0.2rem rgba(255, 204, 0, 0.5);
 }
 
 .badge-danger {
@@ -4916,15 +4916,15 @@ a.badge-dark:focus, a.badge-dark.focus {
 }
 
 .alert-warning {
-  color: #1d643b;
-  background-color: #d7f3e3;
-  border-color: #c7eed8;
+  color: #856a00;
+  background-color: #fff5cc;
+  border-color: #fff1b8;
 }
 .alert-warning hr {
-  border-top-color: #b3e8ca;
+  border-top-color: #ffec9f;
 }
 .alert-warning .alert-link {
-  color: #123c24;
+  color: #524100;
 }
 
 .alert-danger {
@@ -5276,17 +5276,17 @@ a.badge-dark:focus, a.badge-dark.focus {
 }
 
 .list-group-item-warning {
-  color: #1d643b;
-  background-color: #c7eed8;
+  color: #856a00;
+  background-color: #fff1b8;
 }
 .list-group-item-warning.list-group-item-action:hover, .list-group-item-warning.list-group-item-action:focus {
-  color: #1d643b;
-  background-color: #b3e8ca;
+  color: #856a00;
+  background-color: #ffec9f;
 }
 .list-group-item-warning.list-group-item-action.active {
   color: #fff;
-  background-color: #1d643b;
-  border-color: #1d643b;
+  background-color: #856a00;
+  border-color: #856a00;
 }
 
 .list-group-item-danger {
@@ -6160,13 +6160,13 @@ button.bg-info:focus {
 }
 
 .bg-warning {
-  background-color: #38c172 !important;
+  background-color: #ffcc00 !important;
 }
 
 a.bg-warning:hover, a.bg-warning:focus,
 button.bg-warning:hover,
 button.bg-warning:focus {
-  background-color: #2d995b !important;
+  background-color: #cca300 !important;
 }
 
 .bg-danger {
@@ -6264,7 +6264,7 @@ button.bg-dark:focus {
 }
 
 .border-warning {
-  border-color: #38c172 !important;
+  border-color: #ffcc00 !important;
 }
 
 .border-danger {
@@ -9853,11 +9853,11 @@ a.text-info:hover, a.text-info:focus {
 }
 
 .text-warning {
-  color: #38c172 !important;
+  color: #ffcc00 !important;
 }
 
 a.text-warning:hover, a.text-warning:focus {
-  color: #27864f !important;
+  color: #b38f00 !important;
 }
 
 .text-danger {
