--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -13,11 +13,11 @@ $purple: #9561e2;
 $pink: #f66d9b;
 $red: #e3342f;
 $orange: #f6993f;
-$yellow: #ffed4a;
+$yellow: #ffcc00;
 $green: #38c172;
 $teal: #4dc0b5;
 $cyan: #6cb2eb;
 
 //test sass
 $primary: $red;
-$warning: $green;
+$warning: $yellow;
