--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -7,9 +7,11 @@
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
 
+.bg-medium {
+    background-color: rgba(51, 51, 51, 0.712);
+}
 .bg-medical{
-    background-image: url('../../public/img/background/bg-medical-01.jpg');
-    /* background-color: #EDEDED; */
+    background-image: url('../img/background/bg-medical-01.jpg');
     background-repeat: no-repeat;
     background-position-x: center;
     background-position-y: center;
@@ -18,3 +20,17 @@
     position: fixed;
     z-index: 0;
 }
+.widget:hover{
+  background-color: rgba(250, 250, 250, 0.767);
+  border-radius: 10px !important;
+}
+.widget{
+    background-color: rgba(255, 255, 255, 0);
+    border-radius: 10px !important;
+}
+.list-group-item.active {
+    z-index: 2;
+    color: #fff;
+    background-color: #1A263D;
+    border-color: #1A263D;
+  }
