--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -6,3 +6,49 @@
 
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
+
+body {
+    margin:0;
+    font-family:'Muli', sans-serif;
+    font-size:.875rem;
+    font-weight:400;
+    line-height:1.5;
+    -webkit-text-size-adjust:100%;
+    -webkit-tap-highlight-color:rgba(0,0,0,0);
+}
+.bg-medium {
+    background-color: rgba(51, 51, 51, 0.712);
+}
+.bg-medical{
+    background-image: url('../img/background/bg-medical-01.jpg');
+    background-repeat: no-repeat;
+    background-position-x: center;
+    background-position-y: center;
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    z-index: 0;
+}
+.widget:hover{
+  background-color: rgba(250, 250, 250, 0.767);
+  border-radius: 10px !important;
+}
+.widget{
+    background-color: rgba(255, 255, 255, 0);
+    border-radius: 10px !important;
+}
+.list-group-item.active {
+    z-index: 2;
+    background-color: $primary;
+    border-color: $primary;
+  }
+.btn-primary {
+    background-color: $primary !important;
+    color: $white !important;
+}
+.text-primary{
+    color: $primary !important;
+}
+.bg-primary{
+    background-color: $primary !important;
+}
