--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -7,6 +7,14 @@
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
 
+video#bgvid {
+    position: fixed; right: 0; bottom: 0;
+    min-width: 100%; min-height: 100%;
+    width: auto; height: auto; z-index: -100;
+    background: no-repeat;
+    background-size: cover;
+}
+
 body {
     margin:0;
     font-family:'Muli', sans-serif;
@@ -20,7 +28,7 @@ body {
     background-color: rgba(51, 51, 51, 0.712);
 }
 .bg-medical{
-    background-image: url('../img/background/bg-medical-01.jpg');
+    // background-image: url('../img/background/bg-medical-01.jpg');
     background-repeat: no-repeat;
     background-position-x: center;
     background-position-y: center;
