--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -63,3 +63,12 @@ body {
 .btn{
     border-radius: 20px !important;
 }
+#tablist>li>a{
+    border-radius: 25px !important;
+}
+.bg-grey{
+    background-color: $grey;
+}
+.radius{
+    border-radius: 25px !important;
+}
