--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -72,3 +72,7 @@ body {
 .radius{
     border-radius: 25px !important;
 }
+.radius-right {
+    border-bottom-right-radius: 25px;
+    border-top-right-radius: 25px;
+}
