Migrate Bootstrap version 5.0.1

--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -20,3 +20,9 @@ $cyan: #6cb2eb;
 $primary: #1A263D;
 $white: #FFFFFF;
 $grey: #585858;
+
+
+$border-radius:               .6rem;
+$border-radius-sm:            1rem;
+$border-radius-lg:            2rem;
+$border-radius-pill:          50rem;
