--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,12 +1,10 @@
-// Fonts
-@import url('https://fonts.googleapis.com/css?family=Nunito');
-
 // Variables
 @import 'variables';
 
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
 
+// Custom css
 video#bgvid {
     position: fixed; right: 0; bottom: 0;
     min-width: 100%; min-height: 100%;
@@ -15,64 +13,6 @@ video#bgvid {
     background-size: cover;
 }
 
-body {
-    margin:0;
-    font-family:'Muli', sans-serif;
-    font-size:.875rem;
-    font-weight:400;
-    line-height:1.5;
-    -webkit-text-size-adjust:100%;
-    -webkit-tap-highlight-color:rgba(0,0,0,0);
-}
 .bg-medium {
     background-color: rgba(51, 51, 51, 0.712);
-}
-.bg-medical{
-    // background-image: url('../img/background/bg-medical-01.jpg');
-    background-repeat: no-repeat;
-    background-position-x: center;
-    background-position-y: center;
-    width: 100%;
-    height: 100%;
-    position: fixed;
-    z-index: 0;
-}
-.widget:hover{
-  background-color: rgba(250, 250, 250, 0.671);
-  border-radius: 10px !important;
-}
-.widget{
-    background-color: rgba(255, 255, 255, 0);
-    border-radius: 10px !important;
-}
-.list-group-item.active {
-    z-index: 2;
-    background-color: $primary;
-    border-color: $primary;
-  }
-.btn-primary {
-    background-color: $primary !important;
-    color: $white !important;
-}
-.text-primary{
-    color: $primary !important;
-}
-.bg-primary{
-    background-color: $primary !important;
-}
-.btn{
-    border-radius: 20px !important;
-}
-#tablist>li>a{
-    border-radius: 25px !important;
-}
-.bg-grey{
-    background-color: $grey;
-}
-.radius{
-    border-radius: 25px !important;
-}
-.radius-right {
-    border-bottom-right-radius: 25px;
-    border-top-right-radius: 25px;
 }
