--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -4,6 +4,9 @@
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
 
+// Fontawesome 
+@import "~font-awesome/css/font-awesome.css";
+
 // Custom css
 video#bgvid {
     position: fixed; 
