--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -4,19 +4,82 @@
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
 
-// Fontawesome 
+// Fontawesome
 @import "~font-awesome/css/font-awesome.css";
 
-// Custom css
 video#bgvid {
-    position: fixed; 
-    right: 0; 
-    bottom: 0;
-    min-width: 100%; 
-    min-height: 100%;
-    z-index: -100;
+    position: fixed; right: 0; bottom: 0;
+    min-width: 100%; min-height: 100%;
+    width: auto; height: auto; z-index: -100;
+    background: no-repeat;
+    background-size: cover;
 }
 
+body {
+    margin:0;
+    font-family:'Muli', sans-serif;
+    font-size:.875rem;
+    font-weight:400;
+    line-height:1.5;
+    -webkit-text-size-adjust:100%;
+    -webkit-tap-highlight-color:rgba(0,0,0,0);
+}
 .bg-medium {
     background-color: rgba(51, 51, 51, 0.712);
+}
+.bg-medical{
+    // background-image: url('../img/background/bg-medical-01.jpg');
+    background-repeat: no-repeat;
+    background-position-x: center;
+    background-position-y: center;
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    z-index: 0;
+}
+.widget:hover{
+  background-color: rgba(250, 250, 250, 0.671);
+  border-radius: 10px;
+}
+.widget{
+    background-color: rgb(255, 255, 255);
+    border-radius: 10px;
+}
+.list-group-item.active {
+    z-index: 2;
+    background-color: $primary;
+    border-color: $primary;
+  }
+.btn-primary {
+    background-color: $primary;
+    color: $white;
+}
+.text-primary{
+    color: $primary;
+}
+.bg-primary{
+    background-color: $primary;
+}
+.btn{
+    border-radius: 20px;
+}
+.btn:hover{
+    background-color: $white;
+    color:$primary;
+    border: none transparent;
+}
+#tablist>li>a{
+    border-radius: 25px;
+}
+.bg-grey{
+    background-color: $grey;
+}
+.radius{
+    border-radius: 25px !important;
+    border: none;
+}
+.radius-right {
+    border-bottom-right-radius: 25px;
+    border-top-right-radius: 25px;
+    border: none;
 }
