--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -23,6 +23,8 @@ body {
     line-height:1.5;
     -webkit-text-size-adjust:100%;
     -webkit-tap-highlight-color:rgba(0,0,0,0);
+    overflow-y: hidden;
+    overflow-x: hidden;
 }
 .bg-medium {
     background-color: rgba(51, 51, 51, 0.712);
@@ -88,18 +90,18 @@ body {
 
 
 
-/// WRAPPER
+// WRAPPER
 #wrapper {
     padding-left: 0;
     -webkit-transition: all 0.5s ease;
     -moz-transition: all 0.5s ease;
     -o-transition: all 0.5s ease;
     transition: all 0.5s ease;
-  }
-  #wrapper.toggled {
+}
+#wrapper.toggled {
     padding-left: 250px;
-  }
-  #sidebar-wrapper {
+}
+#sidebar-wrapper {
     z-index: 1000;
     position: fixed;
     left: 250px;
@@ -111,78 +113,78 @@ body {
     -moz-transition: all 0.5s ease;
     -o-transition: all 0.5s ease;
     transition: all 0.5s ease;
-  }
-  #wrapper.toggled #sidebar-wrapper {
+}
+#wrapper.toggled #sidebar-wrapper {
     width: 250px;
-  }
-  #page-content-wrapper {
+}
+#page-content-wrapper {
     width: 100%;
     position: absolute;
     padding: 15px;
-  }
-  #wrapper.toggled #page-content-wrapper {
+}
+#wrapper.toggled #page-content-wrapper {
     position: absolute;
     margin-right: -250px;
-  }
-  /* Sidebar Styles */
+}
 
-  .sidebar-nav {
+// Sidebar Styles
+.sidebar-nav {
     position: absolute;
     top: 0;
     width: 250px;
     margin: 0;
     padding: 0;
     list-style: none;
-  }
-  .sidebar-nav li {
+}
+.sidebar-nav li {
     text-indent: 20px;
     line-height: 40px;
-  }
-  .sidebar-nav li a {
+}
+.sidebar-nav li a {
     display: block;
     text-decoration: none;
     color: #999999;
-  }
-  .sidebar-nav li a:hover {
+}
+.sidebar-nav li a:hover {
     text-decoration: none;
     color: #fff;
     background: rgba(255, 255, 255, 0.2);
-  }
-  .sidebar-nav li a:active,
-  .sidebar-nav li a:focus {
+}
+.sidebar-nav li a:active,
+.sidebar-nav li a:focus {
     text-decoration: none;
-  }
-  .sidebar-nav > .sidebar-brand {
+}
+.sidebar-nav > .sidebar-brand {
     height: 65px;
     font-size: 18px;
     line-height: 60px;
-  }
-  .sidebar-nav > .sidebar-brand a {
+}
+.sidebar-nav > .sidebar-brand a {
     color: #999999;
-  }
-  .sidebar-nav > .sidebar-brand a:hover {
+}
+.sidebar-nav > .sidebar-brand a:hover {
     color: #fff;
     background: none;
-  }
-  @media(min-width:768px) {
+}
+@media(min-width:768px) {
     #wrapper {
-      padding-left: 250px;
+        padding-left: 250px;
     }
     #wrapper.toggled {
-      padding-left: 0;
+        padding-left: 0;
     }
     #sidebar-wrapper {
-      width: 250px;
+        width: 250px;
     }
     #wrapper.toggled #sidebar-wrapper {
-      width: 0;
+        width: 0;
     }
     #page-content-wrapper {
-      padding: 20px;
-      position: relative;
+        padding: 20px;
+        position: relative;
     }
     #wrapper.toggled #page-content-wrapper {
-      position: relative;
-      margin-right: 0;
+        position: relative;
+        margin-right: 0;
     }
-  }
+}
