--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -32,15 +32,16 @@ body {
 .bg-medium {
     background-color: rgba(51, 51, 51, 0.712);
 }
-.bg-medical{
-    // background-image: url('../img/background/bg-medical-01.jpg');
+.bg-body{
+    background-image: url('../img/background/bg-grey01.jpg');
     background-repeat: no-repeat;
     background-position-x: center;
     background-position-y: center;
-    width: 100%;
-    height: 100%;
-    position: fixed;
-    z-index: 0;
+    position: fixed; right: 0; bottom: 0;
+    min-width: 100%; min-height: 100%;
+    width: auto; height: auto; z-index: -100;
+    background: no-repeat;
+
 }
 .widget:hover{
   background-color: rgba(250, 250, 250, 0.671);
