conflict css ok

--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -22,6 +22,4 @@ $white: #FFFFFF;
 $grey: #585858;
 
 
-$border-radius:               .6rem;
-$border-radius-sm:            1rem;
-$border-radius-lg:            2rem;
+$border-radius:               10px;
