Integrtion header footer

--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -14,8 +14,8 @@ $yellow: #ffcc00;
 $green: #38c172;
 $teal: #4dc0b5;
 $cyan: #6cb2eb;
-$primary: #1A263D;
-$secondary: #f0c104;
+$primary: #00353F;
+$secondary: #FFBF66;
 $white: #ffffff;
 $grey: #efefef;
 
