--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -14,7 +14,7 @@ $yellow: #ffcc00;
 $green: #38c172;
 $teal: #4dc0b5;
 $cyan: #6cb2eb;
-$primary: #00353F;
+$primary: #1A263D;
 $secondary: #FFBF66;
 $white: #ffffff;
 $grey: #efefef;
